--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,6 +89,7 @@ section h2.title {
 	width: 100%;
 	display: inline-block;
 	padding: 40px;
+	z-index: 9999;
 }
 
 .header-logo {
@@ -597,18 +598,20 @@ header nav li {
 	transform: translateX(6px);
 }
 
-/*works Section*/
+/*Work Section*/
+
+
 img {
 	max-width: 100%;
 }
 
-#app {
+#work {
 	width: 90%;
 	height: 85%;
 	overflow: hidden;
 }
 
-.ui-big-images {
+.work-big-images {
 	position: absolute;
 	height: 70%;
 	width: 50%;
@@ -618,12 +621,12 @@ img {
 	display: flex;
 }
 
-.ui-big-image {
+.work-big-image {
 	width: 100%;
 	margin-right: -100%;
 }
 
-.ui-big-image img {
+.work-big-image img {
 	object-fit: cover;
 	object-position: center 20%;
 	width: 100%;
@@ -632,12 +635,12 @@ img {
 }
 
 @media (max-height: 600px) {
-	.ui-big-image img {
+	.work-big-image img {
 		object-position: center center;
 	}
 }
 
-.ui-thumbnails {
+.work-thumbnails {
 	position: absolute;
 	width: 100%;
 	bottom: 0;
@@ -653,14 +656,14 @@ img {
 	padding-right: calc(45% + .5rem);
 }
 
-.ui-thumbnail {
+.work-thumbnail {
 	display: block;
 	margin-right: 0.5rem;
 	padding: 0.5rem 0;
 	cursor: pointer;
 }
 
-.ui-cuticle {
+.work-cuticle {
 	background-color: #d4a12d;
 	position: absolute;
 	bottom: 0;
@@ -668,18 +671,18 @@ img {
 	width: 100%;
 }
 
-.ui-thumbnail>img {
+.work-thumbnail>img {
 	width: auto;
 }
 
-.ui-content {
+.work-content {
 	position: absolute;
 	width: 40%;
 	right: 5%;
 	bottom: 0;
 }
 
-.ui-articles {
+.work-articles {
 	background: #493e56;
 	color: white;
 	display: flex;
@@ -687,7 +690,7 @@ img {
 	overflow: hidden;
 }
 
-.ui-article {
+.work-article {
 	padding: 1.5rem;
 	width: 100%;
 	margin-right: -100%;
@@ -696,20 +699,20 @@ img {
 	justify-content: center;
 }
 
-.ui-paragraph {
+.work-paragraph {
 	margin: 0;
 	font-size: 0.7rem;
 	line-height: 1.7;
 }
 
-.ui-nav {
+.work-nav {
 	position: absolute;
 	right: 0;
 	bottom: 100%;
 	background: inherit;
 }
 
-.ui-nav button {
+.work-nav button {
 	background: #493e56;
 	border: none;
 	appearance: none;
@@ -721,36 +724,29 @@ img {
 	transition-duration: 300ms;
 }
 
-.ui-nav button:hover,
-.ui-nav button:focus {
+.work-nav button:hover,
+.work-nav button:focus {
 	background: #d4a12d;
 	outline: none;
 }
 
-.ui-nav button:active {
+.work-nav button:active {
 	outline: none;
 	transform: translateY(0.25em);
 	transition-duration: 100ms;
 }
 
-.ui-heading {
+.work-heading {
 	margin: 0;
 	margin-bottom: 0.5rem;
 	font-size: 1rem;
 	font-weight: normal;
 }
 
-.ui-heading:before {
-	content: 'Animator';
-	font-size: 0.5rem;
-	text-transform: uppercase;
-	display: block;
-	margin-bottom: 0.5rem;
-	letter-spacing: 1px;
-}
+
 
 /* ---------------------------------- */
-.ui-big-image {
+.work-big-image {
 	opacity: 0;
 	transition-property: transform, opacity, filter;
 	transition-duration: 0.7s, 0.7s, 0.7s;
@@ -758,84 +754,84 @@ img {
 	transform: translateX(-100%);
 }
 
-.ui-big-image img {
+.work-big-image img {
 	transform: scale(0.85);
 	transition-property: transform, opacity, filter;
 	transition-duration: 0.7s, 0.7s, 0.7s;
 	transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
 }
 
-.ui-big-image[data-active]~.ui-big-image {
+.work-big-image[data-active]~.work-big-image {
 	transform: translateX(100%);
 }
 
-.ui-big-image[data-active] {
+.work-big-image[data-active] {
 	opacity: 1;
 	transform: translateX(0%);
 }
 
-.ui-big-image[data-active] img {
+.work-big-image[data-active] img {
 	transform: scale(1);
 }
 
 /* ---------------------------------- */
-.ui-article {
+.work-article {
 	transition-property: transform, opacity, filter;
 	transition-duration: 0.7s, 0.7s, 0.7s;
 	transition-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
 	transform: translateX(-100%);
 }
 
-.ui-article:before {
+.work-article:before {
 	content: '';
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #d4a12d;
+	background-color: #ffffff;
 	opacity: 1;
 	transition-duration: 0.35s;
 	z-index: 1;
 }
 
-.ui-article[data-active]~.ui-article {
+.work-article[data-active]~.work-article {
 	transform: translateX(100%);
 }
 
-.ui-article[data-active] {
+.work-article[data-active] {
 	transform: translateX(0%);
 }
 
-.ui-article[data-active]:before {
+.work-article[data-active]:before {
 	opacity: 0;
 }
 
 /* ---------------------------------- */
-.ui-thumbnail>img {
+.work-thumbnail>img {
 	filter: grayscale(100%);
 	transition-duration: 0.35s;
 }
 
-.ui-thumbnail:active>img {
+.work-thumbnail:active>img {
 	transform: scale(0.9);
 	transition-duration: 100ms;
 }
 
-.ui-thumbnail:focus {
+.work-thumbnail:focus {
 	outline: none;
 }
 
-.ui-cuticle {
+.work-cuticle {
 	display: none;
 }
 
-.ui-thumbnail[data-active]>img,
-.ui-thumbnail:hover>img {
+.work-thumbnail[data-active]>img,
+.work-thumbnail:hover>img {
 	filter: grayscale(0%);
 }
 
-.ui-thumbnail[data-active] .ui-cuticle {
+.work-thumbnail[data-active] .work-cuticle {
 	display: block;
 }
 
