--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -907,145 +907,123 @@ img {
 	font-family: 'spartan_regular', sans-serif;
 	font-weight: 500;
 }
-
-#contact {
-	font-size: 62.5%;
-	margin: 0 auto;
-	text-align: center;
-	width: 80%;
-	max-width: 1100px;
-}
-
-form {
-	width: 58.33333%;
-	margin: 1.2rem auto;
-}
-
-form .field {
+.contact-form {
+	list-style-type: none;
 	width: 100%;
-	position: relative;
-	margin-bottom: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
-form .field label {
-	color: rgb(255, 255, 255);
-	text-transform: uppercase;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-color: #05124d;
-	width: 18%;
-	padding: 18px 0;
-	font-size: 1.45em;
-	letter-spacing: 0.075em;
-	-webkit-transition: all 333ms ease-in-out;
-	-moz-transition: all 333ms ease-in-out;
-	-o-transition: all 333ms ease-in-out;
-	-ms-transition: all 333ms ease-in-out;
-	transition: all 333ms ease-in-out;
+.contact-form input{
+	padding: 2rem;
 }
-
-form .field label+span {
-	opacity: 0;
-	color: white;
-	display: block;
-	position: absolute;
-	top: 12px;
-	left: 7%;
-	font-size: 2.5em;
-	text-shadow: 1px 2px 0 #d4a12d;
-	-webkit-transition: all 333ms ease-in-out;
-	-moz-transition: all 333ms ease-in-out;
-	-o-transition: all 333ms ease-in-out;
-	-ms-transition: all 333ms ease-in-out;
-	transition: all 333ms ease-in-out;
+.contact-input {
+	flex-basis: 50%;
+	padding: 3.5rem;
 }
-
-form .field input[type="text"],
-form .field textarea {
-	border: none;
-	background: #e8e9ea;
-	width: 100%;
-	margin: 0;
-	padding: 18px 0;
-	padding-left: 19.5%;
-	color: #313a3d;
-	font-size: 1.4em;
-	letter-spacing: 0.05em;
-	text-transform: uppercase;
+.contact-details {
+	flex-basis: 100%;
+	display: flex;
 }
-
-form .field input[type="text"]#msg,
-form .field textarea#msg {
-	height: 52px;
-	resize: none;
-	-webkit-transition: all 333ms ease-in-out;
-	-moz-transition: all 333ms ease-in-out;
-	-o-transition: all 333ms ease-in-out;
-	-ms-transition: all 333ms ease-in-out;
-	transition: all 333ms ease-in-out;
+.contact-details div{
+	flex-basis: 60%;
 }
-
-form .field input[type="text"]:focus,
-form .field textarea:focus,
-form .field input[type="text"].focused,
-form .field textarea.focused {
-	outline: none;
+.contact-details label, .contact-details input{
+	flex-basis: 20%;
 }
-
-form .field input[type="text"]:focus#msg,
-form .field textarea:focus#msg,
-form .field input[type="text"].focused#msg,
-form .field textarea.focused#msg {
-	padding-bottom: 200px;
+.contact-form input, .contact-form textarea, .contact-form select {
+  width: 100%;
+  margin: 0;
+  padding-bottom: .4em;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+  border-bottom: 3px solid slategrey;
+  font-family: 'Roboto', sans-serif;
+  color: lightgrey;
+  font-weight: 700;
+  font-size: 18px;
+  transition: ease-in-out 0.25s;
 }
-
-form .field input[type="text"]:focus+label,
-form .field textarea:focus+label,
-form .field input[type="text"].focused+label,
-form .field textarea.focused+label {
-	width: 18%;
-	background: #d4a12d;
-	color: #05124d;
+.contact-form textarea {
+  min-height: 50px;
+  max-height: 500px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  resize: vertical;
+  overflow: hidden;
 }
-
-form .field input[type="text"].focused+label,
-form .field textarea.focused+label {
-	color: #d4a12d;
+.contact-form ::-webkit-input-placeholder {
+  font-size: 12px;
+  color: slategrey;
+  text-transform: uppercase;
+  font-weight: 400;
 }
-
-form .field:hover label {
-	width: 18%;
-	background: #05124d;
-	color: white;
+.contact-form label {
+  font-size: 12px;
+  color: slategrey;
+  text-transform: uppercase;
+  font-weight: 400;
 }
-
-form input[type="submit"] {
-	background: #d4a12d;
-	color: white;
-	-webkit-appearance: none;
-	border: none;
-	cursor: pointer;
-	text-transform: uppercase;
-	position: relative;
-	padding: 13px 50px;
-	font-size: 1.4em;
-	letter-spacing: 0.1em;
-	font-family: 'spartan_regular', sans-serif;
-	font-weight: 300;
-	-webkit-transition: all 333ms ease-in-out;
-	-moz-transition: all 333ms ease-in-out;
-	-o-transition: all 333ms ease-in-out;
-	-ms-transition: all 333ms ease-in-out;
-	transition: all 333ms ease-in-out;
+.contact-form input:focus, .contact-form select:focus, .contact-form textarea:focus, .contact-form button:focus {
+  outline: none;
+  resize: none;
+  border-bottom: 3px solid #db4d57;
 }
-
-form input[type="submit"]:hover {
-	background: #05124d;
-	color: #d4a12d;
+.contact-form #slider-range-min {
+  outline: 0;
+  background: slategrey;
+  height: 3.6em;
+  border: 0;
+  border-radius: 0;
 }
-
-form input[type="submit"]:focus {
-	outline: none;
-	background: #d4a12d;
+.contact-form #slider-range-min .ui-slider-range {
+  background: #db4d57;
+  border-radius: 0;
+}
+.contact-form #slider-range-min .ui-slider-handle {
+  outline: 0;
+  top: 1.1em;
+  margin-left: -0.6em;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 0;
+  background: white;
+  cursor: pointer;
+}
+.contact-form #amount {
+  border: 0;
+  color: lightgrey;
+  font-weight: 400;
+  font-size: 28px;
+  padding-top: 1.1em;
+  letter-spacing: 3px;
+}
+.contact-form button {
+  color: lightgrey;
+  background: rgba(34, 34, 34, 0.0);
+  border: 3px solid #db4d57;
+  height: 74px;
+  width: 200px;
+  float: right;
+  font-weight: 700;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: ease-in-out 0.25s;
+}
+.contact-form button span {
+  transition: ease-in-out 0.25s;
+}
+.contact-form button:hover {
+  background: #db4d57;
+  color: lightgrey;
+}
+.contact-form button:hover span {
+  padding-left: 10px;
+  color: white;
 }
