--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -907,123 +907,148 @@ img {
 	font-family: 'spartan_regular', sans-serif;
 	font-weight: 500;
 }
+
 .contact-form {
 	list-style-type: none;
 	width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
-.contact-form input{
+
+.contact-form input {
 	padding: 2rem;
 }
+
 .contact-input {
 	flex-basis: 50%;
 	padding: 3.5rem;
 }
+
 .contact-details {
 	flex-basis: 100%;
 	display: flex;
 }
-.contact-details div{
+
+.contact-details div {
 	flex-basis: 60%;
 }
-.contact-details label, .contact-details input{
+
+.contact-details label,
+.contact-details input {
 	flex-basis: 20%;
 }
-.contact-form input, .contact-form textarea, .contact-form select {
-  width: 100%;
-  margin: 0;
-  padding-bottom: .4em;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
-  border-bottom: 3px solid slategrey;
-  font-family: 'Roboto', sans-serif;
-  color: lightgrey;
-  font-weight: 700;
-  font-size: 18px;
-  transition: ease-in-out 0.25s;
+
+.contact-form input,
+.contact-form textarea,
+.contact-form select {
+	width: 100%;
+	margin: 0;
+	padding-bottom: .4em;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	border-top: 0px;
+	border-right: 0px;
+	border-left: 0px;
+	border-bottom: 3px solid slategrey;
+	font-family: 'Roboto', sans-serif;
+	color: lightgrey;
+	font-weight: 700;
+	font-size: 18px;
+	transition: ease-in-out 0.25s;
 }
+
 .contact-form textarea {
-  min-height: 50px;
-  max-height: 500px;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  resize: vertical;
-  overflow: hidden;
+	min-height: 50px;
+	max-height: 500px;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+	resize: vertical;
+	overflow: hidden;
 }
+
 .contact-form ::-webkit-input-placeholder {
-  font-size: 12px;
-  color: slategrey;
-  text-transform: uppercase;
-  font-weight: 400;
+	font-size: 12px;
+	color: slategrey;
+	text-transform: uppercase;
+	font-weight: 400;
 }
+
 .contact-form label {
-  font-size: 12px;
-  color: slategrey;
-  text-transform: uppercase;
-  font-weight: 400;
+	font-size: 12px;
+	color: slategrey;
+	text-transform: uppercase;
+	font-weight: 400;
 }
-.contact-form input:focus, .contact-form select:focus, .contact-form textarea:focus, .contact-form button:focus {
-  outline: none;
-  resize: none;
-  border-bottom: 3px solid #db4d57;
+
+.contact-form input:focus,
+.contact-form select:focus,
+.contact-form textarea:focus,
+.contact-form button:focus {
+	outline: none;
+	resize: none;
+	border-bottom: 3px solid #db4d57;
 }
+
 .contact-form #slider-range-min {
-  outline: 0;
-  background: slategrey;
-  height: 3.6em;
-  border: 0;
-  border-radius: 0;
+	outline: 0;
+	background: slategrey;
+	height: 3.6em;
+	border: 0;
+	border-radius: 0;
 }
+
 .contact-form #slider-range-min .ui-slider-range {
-  background: #db4d57;
-  border-radius: 0;
+	background: #db4d57;
+	border-radius: 0;
 }
+
 .contact-form #slider-range-min .ui-slider-handle {
-  outline: 0;
-  top: 1.1em;
-  margin-left: -0.6em;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 0;
-  background: white;
-  cursor: pointer;
+	outline: 0;
+	top: 1.1em;
+	margin-left: -0.6em;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	border: 0;
+	background: white;
+	cursor: pointer;
 }
+
 .contact-form #amount {
-  border: 0;
-  color: lightgrey;
-  font-weight: 400;
-  font-size: 28px;
-  padding-top: 1.1em;
-  letter-spacing: 3px;
+	border: 0;
+	color: lightgrey;
+	font-weight: 400;
+	font-size: 28px;
+	padding-top: 1.1em;
+	letter-spacing: 3px;
 }
+
 .contact-form button {
-  color: lightgrey;
-  background: rgba(34, 34, 34, 0.0);
-  border: 3px solid #db4d57;
-  height: 74px;
-  width: 200px;
-  float: right;
-  font-weight: 700;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  transition: ease-in-out 0.25s;
+	color: lightgrey;
+	background: rgba(34, 34, 34, 0.0);
+	border: 3px solid #db4d57;
+	height: 74px;
+	width: 200px;
+	float: right;
+	font-weight: 700;
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	transition: ease-in-out 0.25s;
 }
+
 .contact-form button span {
-  transition: ease-in-out 0.25s;
+	transition: ease-in-out 0.25s;
 }
+
 .contact-form button:hover {
-  background: #db4d57;
-  color: lightgrey;
+	background: #db4d57;
+	color: lightgrey;
 }
+
 .contact-form button:hover span {
-  padding-left: 10px;
-  color: white;
+	padding-left: 10px;
+	color: white;
 }
